--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/DrkSephy/celluar-automata",
   "dependencies": {
-    "browserify": "^13.0.0"
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.0",
+    "watchify": "^3.7.0"
   }
 }
