--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "babel-loader": "*",
     "node-libs-browser": "*",
     "webpack": "*"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0"
   }
 }
